# inspirehepMCP

./: .gitignore  README.md  inspirehep_client.py  inspirehep_result.json  mcp_handler.py  package.json  pyproject.toml  query.json  server.py  test_server.py  tsconfig.json
doc/: MCPServerPlan.md  inspire_json_structure.md
src/: index.ts
src/inspirehepmcp/: __init__.py  inspirehep_client.py  mcp_handler.py  server.py
