[project]
name = "inspirehepmcp"
version = "0.1.0"
description = "InspireHEP Model Context Protocol server - Search and manage high energy physics papers"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp[cli]>=1.6.0",
    "requests>=2.32.3",
]

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
inspirehepmcp = "inspirehepmcp:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["inspirehepmcp"]
